# vision-lab

./: .gitignore  README.md
CV_Lab01/: cvlabapp.cpp  cvlabapp.h
ComputerVison/SIFT+SURF+ORB_Feature_Matching/: CMakeLists.txt  Descriptor.h  KeyPoint.h  ORB_test.h  RandomFerns.h  SIFT.cpp  SIFT.h  SIFT_test.h  SURF_test.h  main.cpp
Digital-Media_Course/CV_Lab01/: CV_Lab01.pro  cvlabapp.ui  main.cpp  medianfilter.cpp  medianfilter.h
Digital-Media_Course/CV_Lab02-CUDA/: 数字媒体技术 实验二 CUDA的使用.docx
Digital-Media_Course/CV_Lab02-CUDA/bilateralFiltering/: bilateralFilter.cpp  bilateralFilter_cpu.cpp  bilateralFilter_kernel.cu  bmploader.cpp
Digital-Media_Course/实验要求/2016 数字媒体实验图像处理实验（一）/: 2016年 数字媒体图像处理与可视化编程实验手册.docx
Digital-Media_Course/实验要求/2016 数字媒体实验图像处理实验（一）/任务1 编程环境与基础/: VC项目配置基础 - 曾梦想仗剑走天涯 - 博客频道 - CSDN.NET.htm
Digital-Media_Course/实验要求/2016 数字媒体实验图像处理实验（一）/任务2 可视化程序开发/: GDI 总结三： CImage类使用 - 清流弯弯 - 博客频道 - CSDN.NET.htm
实验要求/2016 数字媒体实验图像处理实验（一）/任务1 编程环境与基础/: Opencv-完美配置攻略.docx
实验要求/2016 数字媒体实验图像处理实验（一）/任务1 编程环境与基础/VC项目配置基础 - 曾梦想仗剑走天涯 - 博客频道 - CSDN.NET_files/: ad-js1020.js  ad-ms1023_2.js  fp.htm  s
实验要求/2016 数字媒体实验图像处理实验（一）/任务2 可视化程序开发/ExperimentImg/: ExperimentImg.sln
实验要求/2016 数字媒体实验图像处理实验（一）/任务2 可视化程序开发/GDI 总结三： CImage类使用 - 清流弯弯 - 博客频道 - CSDN.NET_files/: ac.js  allmobilize.min.js  fp.htm  o.htm
实验要求/2016 数字媒体实验图像处理实验（一）/任务3 多线程图像处理基础/BOOST多线程资料/: Boost多线程编程 - to myself 的分类学习日志 - C++博客.htm
实验要求/2016 数字媒体实验图像处理实验（一）/任务4 图像双边滤波/: A Gentle Introduction to Bilateral Filtering and its Applications.htm  Bilateral Filtering.htm
(+93 files in other folders)
